<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_datos"
        android:icon="@android:drawable/ic_lock_idle_alarm"
        android:title="@string/datos_personales" />

    <item android:title="@string/sitios_interes">

        <menu>
            <item
                android:id="@+id/item_eventos"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/eventos" />
            <item
                android:id="@+id/item_contactos"
                android:icon="@android:drawable/ic_media_ff"
                android:title="@string/contactos" />
            <item
                android:id="@+id/item_docs"
                android:icon="@android:drawable/ic_dialog_alert"
                android:title="@string/documentos" />
            <item
                android:id="@+id/item_conocimientos"
                android:icon="@android:drawable/ic_dialog_alert"
                android:title="@string/conociemientos" />
            />
        </menu>

    </item>

    <item
        android:id="@+id/switch_nav"
        android:icon="@android:drawable/btn_star"
        android:title="@string/localizacion"
        app:actionViewClass="androidx.appcompat.widget.SwitchCompat"/>
</menu>